--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.3",
     "@types/react-icons": "^3.0.0",
     "autoprefixer": "^10.4.19",
+    "firebase": "^10.12.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
